--- a/app/src/main/res/layout/fragment_add_movie.xml
+++ b/app/src/main/res/layout/fragment_add_movie.xml
@@ -15,16 +15,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:indeterminate="true"
+        android:visibility="gone"
         android:progressTint="@color/primary"
         android:layout_gravity="center" />
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:orientation="vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/progressBar"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:padding="16dp"
-        android:layout_marginTop="16dp"
         android:background="@color/white"
         tools:context=".ui.AddMovieFragment">
 
