--- a/app/src/main/res/layout/item_movie_design.xml
+++ b/app/src/main/res/layout/item_movie_design.xml
@@ -73,8 +73,16 @@
                 android:layout_weight="1"
                 android:gravity="end|center_vertical"
                 android:id="@+id/post_action_wrapper"
-                android:visibility="gone"
                 >
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:src="@drawable/ic_share"
+                    app:tint="@color/black"
+                    android:id="@+id/post_share_view"
+                    android:layout_marginEnd="10dp"
+                    />
 
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="36dp"
