--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -25,6 +25,9 @@
         <action
             android:id="@+id/action_moviesFragment_to_editMovieFragment"
             app:destination="@id/editMovieFragment" />
+        <action
+            android:id="@+id/action_moviesFragment_to_movieDetailFragment"
+            app:destination="@id/movieDetailFragment" />
     </fragment>
     <fragment
         android:id="@+id/exploreFragment"
@@ -55,6 +58,9 @@
         <action
             android:id="@+id/action_myPostsFragment_to_editMovieFragment"
             app:destination="@id/editMovieFragment" />
+        <action
+            android:id="@+id/action_myPostsFragment_to_movieDetailFragment"
+            app:destination="@id/movieDetailFragment" />
     </fragment>
     <fragment
         android:id="@+id/accountFragment"
@@ -95,6 +101,17 @@
         android:name="net.moviemate.app.v.fragments.EditMovieFragment"
         android:label="Edit Movie Detail"
         tools:layout="@layout/fragment_edit_movie" >
+
+        <argument
+            android:name="movie"
+            app:argType="net.moviemate.app.m.Movie" />
+
+    </fragment>
+    <fragment
+        android:id="@+id/movieDetailFragment"
+        android:name="net.moviemate.app.v.fragments.MovieDetailFragment"
+        android:label="Movie Detail"
+        tools:layout="@layout/fragment_movie_detail" >
 
         <argument
             android:name="movie"
