--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -40,6 +40,9 @@
         <action
             android:id="@+id/action_exploreFragment_to_accountFragment"
             app:destination="@id/accountFragment" />
+        <action
+            android:id="@+id/action_exploreFragment_to_addMovieFragment"
+            app:destination="@id/addMovieFragment" />
     </fragment>
     <fragment
         android:id="@+id/myPostsFragment"
@@ -84,7 +87,13 @@
         android:id="@+id/addMovieFragment"
         android:name="net.moviemate.app.v.fragments.AddMovieFragment"
         android:label="Add New Movie"
-        tools:layout="@layout/fragment_add_movie" />
+        tools:layout="@layout/fragment_add_movie" >
+
+        <argument
+            android:name="movie"
+            app:argType="net.moviemate.app.m.MovieEntity" />
+
+    </fragment>
     <fragment
         android:id="@+id/updateAccountDetailFragment"
         android:name="net.moviemate.app.v.fragments.UpdateAccountDetailFragment"
