minor bug fixes

--- a/app/src/main/res/layout/item_movie_design.xml
+++ b/app/src/main/res/layout/item_movie_design.xml
@@ -82,6 +82,7 @@
                     app:tint="@color/black"
                     android:id="@+id/post_share_view"
                     android:layout_marginEnd="10dp"
+                    android:visibility="gone"
                     />
 
                <androidx.appcompat.widget.AppCompatImageView
